[gd_scene load_steps=2 format=3 uid="uid://cullc7yh5jp87"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_707qa"]

[node name="StartMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_707qa")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.662745)

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -11.5
offset_right = 57.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Space Explorer"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.5
offset_top = -75.0
offset_right = 50.5
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
text = "High Score: 0"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = 50.0
offset_right = 23.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="ResetScoreButton" type="Button" parent="."]
process_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -50.0
offset_right = 49.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
text = "Reset Score"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ResetScoreButton" to="." method="_on_reset_score_button_pressed"]
